# examination

./: CMakeLists.txt  buy_hat.c  dual_core.cpp  empty_bottle.c  go_home.c  hex_to_dec.c  inequality_sequence.c  inequality_sequence.cpp  inequality_sequence1.cpp  inequality_sequence2.cpp  put_tail_sort.c  put_tail_sort.cpp  sort_remove_repeat.c  triangle_area.c  triangle_area.cpp
